# plread

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  display.rs  main.rs
src/reader/: ipc.rs  ipc_stream.rs  mod.rs  parquet.rs
tests/: integration.rs
