[package]
name = "plread"
version = "1.0.0"
edition = "2024"
description = "CLI tool to preview Arrow IPC, IPC Stream, and Parquet files"

[dependencies]
polars = { version = "0.53", features = ["ipc", "ipc_streaming", "parquet", "lazy", "diagonal_concat"] }
clap = { version = "4.6", features = ["derive"] }
glob = "0.3"
